<resources>
    <string name="app_name">Cook It</string>
    <string name="title_activity_main">Main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>
    <string name="add_new_recipe">Новый рецепт</string>
    <string name="ingredients_recipe">Интгредиенты</string>
    <string name="how_recipe">Способ приготовления</string>
    <string name="category_recipe">Категория</string>
    <string name="name_recipe">Название</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_passwordConfirm">Подтверждение пароля</string>
    <string name="btn_sign_up">Зарегестрироваться</string>
    <string name="btn_link_login">У меня есть аккаунт!</string>
</resources>
